--- a/alert-l-matic/package.json
+++ b/alert-l-matic/package.json
@@ -12,10 +12,12 @@
     "@react-navigation/drawer": "^6.7.2",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
+    "axios": "^1.7.7",
     "expo": "~51.0.28",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-native": "0.74.5",
+    "react-native-paper": "^5.12.5",
     "react-native-reanimated": "^3.10.1",
     "react-native-safe-area-context": "^4.10.5",
     "react-native-screens": "^3.31.1"
