--- a/server/package.json
+++ b/server/package.json
@@ -4,11 +4,13 @@
   "description": "Server for alert-l-matic application for disaster management",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Team Tech-Immortals",
   "license": "MIT",
   "dependencies": {
+    "@google/generative-ai": "^0.17.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
