Authentication system and Home UI

--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,4 @@
-GEMINI_API_KEY = "YOUR_API_KEY"
+MONGO_URI = "MONGOURI"
+SECRET_KEY = 'CRVTBYNJKMLTVYBNVYBN'
+EXPIRY_TIME = '2d'
+GEMINI_API_KEY = "YOUR API KEY"
